<resources>
    <string name="app_name">HappyHog</string>
    <string name="txt_title">TITLE</string>
    <string name="txt_memo">MEMO</string>
    <string name="txt_state">STATE</string>
    <string name="txt_blank"> </string>
    <string name="facebook_app_id">441092226092961</string>

    <string name="image_folder">/happyhog/image</string>
    <string name="screen_shot_folder">/happyhog/screenshot</string>
    <string name="image_temp_file">/temp.jpeg</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancle">CANCLE</string>
    <string name="dialog_share_facebook">페이스북에 공유하기</string>

    <!--
    메인액티비티의 문자열
    -->
    <string name="main_register_main_animal">메인 동물로 등록하시겠습니까?</string>
    <string name="main_delete_animal">동물을 삭제하시겠습니까?</string>
    <string name="main_added_animal">추가 되었습니다.</string>
    <string name="main_need_animal">메인 동물을 등록해주세요.</string>
    <string name="main_save_screenshot">스크린샷 되었습니다.</string>
    <string name="main_already_play_video">이미 동영상이 재생 중입니다.</string>
    <string name="main_wrong_url_string">잘못된 URL입니다.</string>

    <!--
    셋팅액티비티의 문자열
    -->
    <string name="setting_button1">PROFILE</string>
    <string name="setting_button2">SENSOR</string>
    <string name="setting_button3">FEEDING</string>

    <!--
    FeedingActivity의 문자열
    -->
    <string name="feeding_image_time">TIME</string>
    <string name="feeding_image_amount">AMOUNT</string>
    <string name="feeding_add_description">1cycle은 약 50ml입니다. 플러스 버튼을 누르면 자동 밥 주기가 추가됩니다.</string>
    <string name="feeding_ask_delete">지우시겠습니까?</string>

    <!--
    프로파일 액티비티의 문자열
    -->
    <string name="profile_title">TITLE</string>
    <string name="profile_memo">MEMO</string>
    <string name="profile_change">CHANGE</string>
    <string name="profile_create">CREATE</string>
    <string name="profile_request_password">의 비밀번호를 입력해주세요.</string>
    <string name="profile_no_typing">입력하지 않은 칸이 있습니다.</string>
    <string name="profile_typing_main_mac_address">MAIN 제품 번호를 입력하세요.</string>
    <string name="profile_typing_sub_mac_address">SUB 제품 번호를 입력하세요.</string>
    <string name="profile_typing_ssid">공유기의 SSID를 입력하세요.</string>

    <string name="database_exist_animal">같은 동물 이름이 존재합니다. 다시 입력해주세요.</string>

    <!--
    프로파일 티비티의 프로그래스 다이어로그의 문자열
    -->
    <string name="progress_enabling">WIFI를 켜고 있습니다.</string>
    <string name="progress_searching">WIFI를 스캔 중입니다.</string>
    <string name="progress_configure">WIFI를 설정 중입니다.</string>
    <string name="progress_connecting">WIFI를 연결 중입니다</string>
    <string name="progress_esp_request">그거를 설정 중입니다.</string>
    <string name="progress_retry">다른 WIFI에 연결되었습니다. 다시 시도합니다.</string>
    <string name="progress_notexist">기기를 찾을 수 없습니다. 다시 확인해주세요</string>

    <!--
    MainActivity 레이아웃 파일의 문자열
    -->
    <string name="main_image_food">FOOD</string>
    <string name="main_image_camera">MEDIA</string>
    <string name="main_image_share">SHARE</string>
    <string name="main_image_info">INFO</string>
    <string name="main_already_animal">이미 메인 동물로 등록된 동물입니다.</string>
    <string name="main_do_not_support">지원하지 않는 기능입니다.</string>
    <string name="main_input_filename">파일명을 입력하세요.</string>


    <!--
    SensorActivity 레이아웃 파일의 문자열
    -->
    <string name="sensor_image_temp">온도</string>
    <string name="sensor_max_temp">최고 온도</string>
    <string name="sensor_min_temp">최저 온도</string>
    <string name="sensor_image_humid">습도</string>
    <string name="sensor_max_humid">최고 습도</string>
    <string name="sensor_min_humid">최저 습도</string>


    <!--
    preference 관련 문자열
    -->
    <string name="preference_not_exist_main">메인 동물이 존재하지 않습니다.</string>
    <string name="preference_main_animal_title">현재 메인 동물</string>
    <string name="preference_account_setting_title">계정 설정</string>

    <string name="preference_auto_login_title">드랍박스 자동 로그인</string>
    <string name="preference_auto_login_summaryon">자동 로그인을 합니다.</string>
    <string name="preference_auto_login_summaryoff">자동 로그인을 하지 않습니다.</string>

    <string name="preference_individual_title">개인 정보</string>
    <string name="preference_account_information_title">계정 정보</string>
    <string name="preference_account_information_summary">계정 정보를 확인합니다.</string>

    <string name="preference_version_information_title">버전 정보</string>
    <string name="preference_version_information_summary">버전 정보를 확인합니다.</string>
    <string name="preference_help_title">도움말</string>
    <string name="preference_help_summary">도움말을 확인합니다</string>
    <string name="preference_terms_policy_category_title">약관 및 정책</string>
    <string name="preference_terms_title">이용 약관</string>
    <string name="preference_terms_summary">이용 약관을 확인합니다.</string>
    <string name="preference_policy_title">개인정보 취급방침</string>
    <string name="preference_policy_summary">개인정보 취급방침을 확인합니다</string>
    <string name="preference_reference_title">참조</string>
    <string name="preference_reference_summary">어디를 참조했을까 난 모름</string>
</resources>
