<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/toolbar"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:weightSum="1"
                    android:background="?attr/colorAccent">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/txt_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                        android:id="@+id/tv_main_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:weightSum="1"
                    android:background="?attr/colorAccent">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/txt_memo"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                        android:id="@+id/tv_main_memo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:background="?attr/colorAccent">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/txt_state"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                        android:id="@+id/tv_main_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
                android:id="@+id/webView_container"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:scaleType="fitXY"
                android:background="@drawable/default_empty_image"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:baselineAligned="false"
                android:weightSum="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="?attr/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/btn_feed"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/put_feed_white"
                        tools:ignore="ContentDescription"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textColor="@color/colorBackgray"
                          android:text="@string/main_image_food"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="?attr/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/btn_camera"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/main_camera_white"
                        tools:ignore="ContentDescription"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textColor="@color/colorBackgray"
                          android:text="@string/main_image_camera"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="?attr/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/btn_share"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/main_share_white"
                        tools:ignore="ContentDescription"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textColor="@color/colorBackgray"
                          android:text="@string/main_image_share"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="?attr/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/btn_animal_setting"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/main_pet_info_white"
                        tools:ignore="ContentDescription"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:textColor="@color/colorBackgray"
                          android:text="@string/main_image_info"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/animal_list"/>

</android.support.v4.widget.DrawerLayout>
