<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
android:background="@color/colorBackgray">

    <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar"/>
    <!--
    첫번째 행 리니어 레이아웃
    -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/sensor_layout_height"
                  android:layout_margin="10dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:layout_marginLeft="2dp"
                      android:layout_marginRight="2dp"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:orientation="vertical">

            <ImageView android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:src="@mipmap/sensor_temp_white"
                       tools:ignore="ContentDescription"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:gravity="center"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_image_temp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:layout_weight="1">

            <Spinner android:id="@+id/spinner_min_temp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="0.2"
                     android:background="@android:color/white"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.8"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_min_temp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:layout_weight="1">

            <Spinner android:id="@+id/spinner_max_temp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="0.2"
                     android:background="@android:color/white"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.8"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_max_temp"/>
        </LinearLayout>
    </LinearLayout>

    <!--
    두 번째 행 리니어 레이아웃
    -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/sensor_layout_height"
                  android:layout_margin="10dp"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.2">

            <Button android:id="@+id/btn_sensor_temp_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/colorSplash"
                    android:text="1"
                    android:textSize="25sp"
                    android:layout_weight="1"/>

            <Button android:id="@+id/btn_sensor_temp_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/white"
                    android:text="2"
                    android:textSize="25sp"
                    android:layout_weight="1"/>

            <Button android:id="@+id/btn_sensor_temp_n"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/white"
                    android:text="N"
                    android:textSize="25sp"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="0.8"
                  android:layout_marginLeft="2dp"
                  android:layout_marginRight="2dp"
                  android:gravity="center"
                  android:background="@color/colorDarkbrown"
                  android:textColor="@color/colorBackgray"
                  android:text="outlet number related to temp"/>
    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"

            android:src="@drawable/line_darkbrown"
            tools:ignore="ContentDescription"/>

    <!--
    세 번째 행 리니어 레이아웃
    -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/sensor_layout_height"
                  android:layout_margin="10dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:layout_marginLeft="2dp"
                      android:layout_marginRight="2dp"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:orientation="vertical">

            <ImageView android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:src="@mipmap/sensor_humid_white"
                       tools:ignore="ContentDescription"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:gravity="center"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_image_humid"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:layout_weight="1">

            <Spinner android:id="@+id/spinner_min_humid"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="0.2"
                     android:background="@android:color/white"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.8"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_min_humid"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:layout_weight="1">

            <Spinner android:id="@+id/spinner_max_humid"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="0.2"
                     android:background="@android:color/white"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.8"
                      android:gravity="center"
                      android:background="@color/colorDarkbrown"
                      android:textColor="@color/colorBackgray"
                      android:text="@string/sensor_max_humid"/>
        </LinearLayout>
    </LinearLayout>

    <!--
    네 번째 행 리니어 레이아웃
    -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/sensor_layout_height"
                  android:layout_margin="10dp"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="0.2">

            <Button android:id="@+id/btn_sensor_humid_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/white"
                    android:text="1"
                    android:textSize="25sp"
                    android:layout_weight="1"/>

            <Button android:id="@+id/btn_sensor_humid_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/colorSplash"
                    android:text="2"
                    android:textSize="25sp"
                    android:layout_weight="1"/>

            <Button android:id="@+id/btn_sensor_humid_n"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/white"
                    android:text="N"
                    android:textSize="25sp"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="0.8"
                  android:layout_marginLeft="2dp"
                  android:layout_marginRight="2dp"
                  android:gravity="center"
                  android:background="@color/colorDarkbrown"
                  android:textColor="@color/colorBackgray"
                  android:text="outlet number related to humid"/>
    </LinearLayout>
</LinearLayout>